--- a/flexbox/14-article.html
+++ b/flexbox/14-article.html
@@ -101,7 +101,7 @@
                                 <ul class="social nav">
                                     <li class="social-item nav-item">
                                         <a
-                                            href="https://www.facebook.com/HolbertonSchool/"
+                                            href="#"
                                             class="social-link">
                                             <svg viewbox="0 0 24 24"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -115,7 +115,7 @@
                                         </a>
                                     </li>
                                     <li class="social-item nav-item">
-                                        <a href="https://twitter.com/holbertonschool"
+                                        <a href="#"
                                             class="social-link">
                                             <svg viewbox="0 0 24 24"
                                                 xmlns="http://www.w3.org/2000/svg"
