--- a/form/03-article.html
+++ b/form/03-article.html
@@ -151,13 +151,13 @@
                 <fieldset>
                     <legend class="visually-hidden">Your personal information</legend>
                     <div class="form-group col-1-2">
-                        <label for="your-first-name">First name</label>
+                        <label for="your-first-name">First Name</label>
                         <div class="form-field">
                             <span class="form-field-container"></span>
                         </div>
                     </div>
                     <div class="form-group col-1-2">
-                        <label for="your-last-name">Last name</label>
+                        <label for="your-last-name">Last Name</label>
                         <div class="form-field">
                             <span class="form-field-container"></span>
                         </div>
