--- a/JQuery_advanced/7-index.html
+++ b/JQuery_advanced/7-index.html
@@ -3,9 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <script src="https://code.jquery.com/jquery-3.7.0.slim.min.js"
-            integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE="
-            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <title>Task 0</title>
 </head>
 
